syntax = "proto3";

package proto;

option go_package = "goAdvancedTpl/internal/server/proto";

message Metric {
string id = 1;
string mType = 2;
string hash = 3;
int64 delta = 4;
double value = 5;
}

message AddMetricsRequest {
  repeated Metric metric = 1;
}

message AddMetricsResponse {
string error = 1; // ошибка
}

service Metrics {
rpc AddMetrics(AddMetricsRequest) returns (AddMetricsResponse);
}